takeTurn functional blind game online
Co-authored-by: Noah Kise <noah@kisefamily.com>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
+
+    <form>
+        <select id="XorO">
+            <option value="X">X</option>
+            <option value="O">O</option>
+        </select>
+    </form>
+
     <form id="playerNames">
         <label for="player1Name">Player 1 Name:</label>
         <input type="text" id="player1Name" name="player1Name">
