finish toggle, clean up, begin CSS
Co-authored-by: Noah Kise <noah@kisefamily.com>

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1>Tic-Tac-Toe</h1>
 
     <form>
-        <select id="XorO">
-            <option value="X">X</option>
-            <option value="O">O</option>
+        <label for="currentPlayer">Current Player:</label>
+        <select id="XorO" name="currentPlayer">
+            <option value="X" id="X">X</option>
+            <option value="O" id="O">O</option>
         </select>
     </form>
 
