add css styling
Co-authored-by: Noah Kise <noah@kisefamily.com>

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <h1>Tic-Tac-Toe</h1>
 
     <form>
-        <label for="currentPlayer">Current Player:</label>
+        <label for="currentPlayer">Current Player:</label><br>
         <select id="XorO" name="currentPlayer">
             <option value="X" id="X">X</option>
             <option value="O" id="O">O</option>
         </select>
     </form>
-
+<!-- 
     <form id="playerNames">
         <label for="player1Name">Player 1 Name:</label>
         <input type="text" id="player1Name" name="player1Name">
         <label for="player2Name">Player 2 Name:</label>
         <input type="text" id="player2Name" name="player2Name">
-    </form>
+    </form> -->
     <table id="gameBoard">
         <tr>
             <td id="0">
