--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </td>
         </tr>
     </table>
-    <div>
+    <div id="success">
+        <img src="img/windGuy.gif" alt="wind guy" class="hidden" id="guy">
         <h2 id="winner"></h2>
     </div>
 </body>
