add choice of number of players
Co-authored-by: Noah Kise <noah@kisefamily.com>

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <option value="O" id="O">O</option>
         </select>
     </form>
+    <form>
+        <label for="howManyPlayers">How Many Players?</label><br>
+        <select id="1or2" name="howManyPlayers">
+            <option value="1" id="1player">One</option>
+            <option value="2" id="2player">Two</option>
+        </select>
+    </form>
 <!-- 
     <form id="playerNames">
         <label for="player1Name">Player 1 Name:</label>
