--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/mobileStyles.css" rel="stylesheet" type="text/css">
     <script src="js/scripts.js"></script>
     <title>Tic-Tac-Toe</title>
 </head>
